--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,24 @@ h2.title {
 
 	color: #ffffff;
 }
+
+.promo .promo_text {
+	margin-top: 22.5px;
+	padding: 0 13px;
+	color: white;
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 300;
+	font-size: 21px;
+	line-height: 28px;
+	/* or 133% */
+	/* display: flex; */
+	align-items: center;
+	text-align: center;
+}
+
+.promo .promo_text span {
+	font-family: "Roboto-Bold";
+	color: #f9bf3b;
+	font-weight: 700;
+}
