--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,51 @@ h2.title {
 	margin: 0 auto;
 	margin-top: 4px;
 }
+
+.waiting {
+	height: 607px;
+	background: #efefef;
+	padding: 85px 0 75px 0;
+}
+
+.waiting .waiting_header {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 30px;
+	line-height: 30px;
+	/* or 100% */
+
+	/* display: flex; */
+	align-items: center;
+	text-align: center;
+	text-transform: uppercase;
+
+	color: #252525;
+}
+
+.waiting .hr_waiting {
+	margin-top: 18px;
+}
+
+.waiting .waiting_description {
+	margin-top: 19px;
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 23px;
+	line-height: 20px;
+	/* identical to box height, or 87% */
+
+	/* display: flex; */
+	align-items: center;
+	text-align: center;
+	color: #4a4a4a;
+}
+.waiting .waiting_wrapper {
+	display: inline-block;
+}
+
+.waiting .waiting_wrapper .waiting_img {
+	position: relative;
+}
