update: work with properties in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -155,10 +155,14 @@ h2.title {
 }
 
 .waiting .hr_waiting {
+	margin: 0 auto;
 	margin-top: 18px;
+	width: 217px;
+	height: 4px;
+	background-color: #f9bf3b;
 }
 
-.waiting .waiting_description {
+.waiting .waiting_subheader {
 	margin-top: 19px;
 	font-family: "Roboto";
 	font-style: normal;
@@ -173,9 +177,37 @@ h2.title {
 	color: #4a4a4a;
 }
 .waiting .waiting_wrapper {
-	display: inline-block;
+	/* width: 384px; */
+	margin-top: 45px;
 }
 
-.waiting .waiting_wrapper .waiting_img {
-	position: relative;
+.waiting .waiting_wrapper .waiting_item {
+	width: 342px;
+	display: inline-block;
+	margin: 0 auto;
+	vertical-align: top;
+}
+
+.waiting .waiting_wrapper .waiting_item .waiting_img {
+	width: 100%;
+}
+.waiting .waiting_wrapper .waiting_item#second_img_in_waiting_section {
+	margin-right: 53px;
+	margin-left: 53px;
+}
+
+.waiting .waiting_wrapper .waiting_item .waiting_description {
+	margin-top: 26px;
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 21px;
+	/* or 140% */
+
+	/* display: flex; */
+	align-items: center;
+	text-align: center;
+
+	color: #4a4a4a;
 }
