--- a/css/style.css
+++ b/css/style.css
@@ -425,3 +425,56 @@ align-items: center; */
 
 	color: #4a4a4a;
 }
+
+footer {
+	background: #1a1a1a;
+	padding-top: 57px;
+	padding-bottom: 69px;
+	min-height: 169px;
+}
+
+footer p {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 21px;
+	/* or 140% */
+
+	/* display: flex; */
+	align-items: center;
+	text-align: center;
+	/* text-decoration-line: underline; */
+
+	color: #888888;
+}
+
+footer p a {
+}
+
+footer p .phone_link {
+	text-decoration: none;
+}
+
+footer p a:link {
+	/* color: #265301; */
+}
+
+footer p a:visited {
+	color: #888888;
+}
+
+footer p a:focus {
+	border-bottom: 1px solid;
+	background: #f9bf3b;
+}
+
+footer p a:hover {
+	border-bottom: 1px solid;
+	background: #f9bf3b;
+}
+
+footer p a:active {
+	background: #f9bf3b;
+	/* color: #cdfeaa; */
+}
